[project]
name = "nonebot-plugin-bilibili-notifier"
version = "0.2.1"
description = "NoneBot2 plugin for pushing update and live notifications from Bibibili."
authors = [
    {name = "Variante", email = "382086919@qq.com"},
]
license = {text = "MIT"}
dependencies = ["nonebot2>=2.0.0rc2", "nonebot-adapter-onebot>=2.1.5", "nonebot-plugin-apscheduler>=0.2.0", "bilibili-api-python>=16.2.0", "nonebot_plugin_localstore", "nonebot-plugin-send-anything-anywhere"]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Variante/nonebot-plugin-bilibili-notifier"
Repository = "https://github.com/Variante/nonebot-plugin-bilibili-notifier"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
